# computing-in-the-catskills

./: .gitignore  README.md  add_elevation_to_hikes.py  all_hikes_subset_cover.py  approx_distance.py  augment_trails.py  cap_hike_length.py  elevation.py  extract_network.py  filter_to_peak_list.py  formatting.py  generate_web_data.py  graph.py  hike_sample.py  loops.py  loops_test.py  noon_bean.py  noon_bean_test.py  orsample.py  ort_wrapper.py  osm.py  osm_test.py  parking_lot_names.py  parking_lots.py  peak_planner.py  pyproject.toml  relabel_network.py  run_overpass_query.py  sanity.py  shift_peaks.py  spec.py  subset_cover.py  tsp.py  util.py
data/: additional-trails.json  alternate-peaks.json  day-hikes-only.geojson  day-loop-hikes-only.geojson  day-prefer-loop-hikes.geojson  high-peaks-region.geojson  hikes.json  loop-tsp.geojson  loops-only.geojson  loops.json  network+parking.geojson  network.geojson  parking-connections.geojson  parking.json  peak-planner-loops-only.geojson  peak-planner.geojson  peaks-3500.json  peaks-connected.json  peaks.json  prefer-loop-hikes.geojson  tsp.geojson  unrestricted.geojson
data/additional-trails/: belleayre-connection-1.geojson  biscuit-brook-sdt.geojson  dry-brook-true-summit.geojson  gillespie-rt-khp-connector.geojson  halcott-from-elk-creek.geojson  halcott-sleeping-lion-conlon.geojson  khp-to-rt.geojson  north-bearpen-ridge-traverse.geojson  (+5 more)
gallery/: 11-through-hikes-95.2-miles.geojson  12-loop-hikes-104.9-miles.geojson  adk-7-159mi.geojson
queries/: alternate-peaks.txt  peaks.txt  roads.txt  trails.txt
(+52 files in other folders)
