[tool.poetry]
name = "computing-in-the-catskills"
version = "0.1.0"
description = "Who doesn't like a little math in the woods?"
authors = ["Dan Vanderkam <danvdk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
networkx = "^3.1"
ortools = "^9.6.2534"
setcoverpy = "^0.9.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
